--- a/index.html
+++ b/index.html
@@ -22,6 +22,55 @@
     </div>
 
     <div class="signup-container">
+
+        <p>This is not real online service! You know you need something like this in your life to help you realize your
+            deapest dreams. Sign up <i>now</i> to get started.</p>
+
+        <p>You <i>know</i> you want to.</p>
+
+        <form action="#" id="submit-form">
+            <h3>Let's do this!</h3>
+            <fieldset>
+                <ul>
+                    <li>
+                        <label for="first-name">first name</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </li>
+                    <li>
+                        <label for="last-name">last name</label>
+                        <input type="text" name="last-name" id="lastname">
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <ul>
+                    <li>
+                        <label for="email">email</label>
+                        <input type="email" name="email" id="email">
+                    </li>
+                    <li>
+                        <label for="phone-number">phone number</label>
+                        <input type="tel" name="phone-number" id="phone-number">
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <ul>
+                    <li>
+                        <label for="password1">password</label>
+                        <input type="password" name="password1" id="password1">
+                    </li>
+                    <li>
+                        <label for="password2">confirm password</label>
+                        <input type="password" name="password2" id="password2">
+                    </li>
+                </ul>
+            </fieldset>
+        </form>
+
+        <button type="submit" form="submit-form">create account</button>
+
+        <p>Already have an account? <a href="#">Log in</a></p>
     </div>
 
 
